[tool.poetry]
name = "openlit-demo"
version = "0.1.0"
description = ""
authors = ["Satendra Kumar <satendrakumar06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
fastapi = "^0.115.6"
openlit = "^1.33.4"
uvicorn = "^0.34.0"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
